--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,11 @@
             <artifactId>mongodb-driver-sync</artifactId>
             <version>4.4.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>bson</artifactId>
+            <version>4.4.2</version>
+        </dependency>
 
 
     </dependencies>
