--- a/pom.xml
+++ b/pom.xml
@@ -140,5 +140,11 @@
             <artifactId>mongodb-driver-core</artifactId>
             <version>4.4.2</version>
         </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
     </dependencies>
 </project>
