--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "~13.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
