--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -69,7 +69,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "frontend:build:production",
-            "proxyConfig": "src/proxy.conf.json"
+            "proxyConfig": "src/proxy.conf.json",
+            "ssl": true,
+            "sslCert": "ssl/certificate.pem",
+            "sslKey": "ssl/key.pem"
           },
           "configurations": {
             "production": {
@@ -109,3 +112,4 @@
   },
   "defaultProject": "frontend"
 }
+
