--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -69,10 +69,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "frontend:build:production",
-            "proxyConfig": "src/proxy.conf.json",
-            "ssl": true,
-            "sslCert": "ssl/certificate.pem",
-            "sslKey": "ssl/key.pem"
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
